<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Índice de Massa Corpórea (IMC) </string>
    <string name="txt_peso">Peso</string>
    <string name="txt_altura">Altura</string>
    <string name="txt_resultado">Resultado</string>

    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpar">Limpar</string>

    <string name="action_settings">Configurações</string>
</resources>
