<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    android:paddingBottom="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context=".Principal"
    >



    <TextView android:text="@string/txt_peso"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView android:text="@string/txt_altura"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView android:text="@string/txt_resultado"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtResultado"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:inputType="numberDecimal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btnCalcular"
        android:text="@string/btn_calcular"
        android:layout_width="wrap_content"
        android:width="120sp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLimpar"
        android:text="@string/btn_limpar"
        android:layout_width="wrap_content"
        android:width="120sp"
        android:layout_height="wrap_content" />

    </LinearLayout>



    </LinearLayout>